# brain-morph

./: .gitignore  API_REFERENCE.md  CLAUDE.md  MANIFEST.in  README.md  TZ_FRONTEND.md  pyproject.toml  Презентация1 [Автосохраненный].pptx
.github/: copilot-instructions.md
frontend/: index.html
notebooks/: brain_from_tif_reg.ipynb  brain_from_tif_reg_2.ipynb  bscl_registration.ipynb  registration_demo.ipynb
src/: __init__.py
src/brain_morph/: __init__.py
src/brain_morph/registration/: __init__.py  cost.py  optimizers.py  pipeline.py
src/brain_morph/utils/: __init__.py  compute_tension_3d.py  mask_3d.py  mesh_transform_2d.py  mesh_transform_3d.py  mesh_transformer_3d.py  plotting.py  preprocess.py  streaming.py  tension_metrics.py  volume.py
src/registration/: __init__.py  optimizers.py
src/utils/: __init__.py  compute_tension_3d.py  mask_3d.py  mesh_transform.py  mesh_transform_2d.py  mesh_transform_3d.py  mesh_transformer_3d.py  simulated_annealing.py  test_mt2d.py  test_mt3d.py  volume.py
tests/: test_mesh_transform.py  test_mesh_transform_2d.py  test_mesh_transform_3d.py  test_mesh_transformer.py  test_mesh_transformer_3d.py  test_optimizers.py  test_pipeline.py  test_preprocess.py  test_sa_batch.py  test_streaming.py  test_tension.py  test_tension_metrics.py
