[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-morph"
version = "0.1.0"
description = "Python reimplementation of mesh-based 3D brain registration (original algorithm by S. Shuvaev, CSHL)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Ivan Doronin", email = "iadoronin@yandex.ru"}]
requires-python = ">=3.10"
keywords = [
    "brain registration", "image registration", "3D registration",
    "neuroscience", "mesh deformation", "simulated annealing", "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.22",
    "opencv-python>=4.5",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
io  = ["nibabel>=3.2"]
dev = ["pytest>=7", "pytest-cov", "pip-tools"]

[tool.setuptools.packages.find]
where = ["src"]
